[gd_scene load_steps=16 format=2]

[ext_resource path="res://level/assets/wood-2.png" type="Texture" id=1]
[ext_resource path="res://level/assets/wood-1.png" type="Texture" id=2]
[ext_resource path="res://level/rotten_wood.gd" type="Script" id=3]
[ext_resource path="res://vfx/wood_fragment_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://vfx/wood_fragment_2.tscn" type="PackedScene" id=5]
[ext_resource path="res://level/boid_collision.tscn" type="PackedScene" id=6]
[ext_resource path="res://level/obstacle_label.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/SoundEffect.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio/sfx/wood_thud.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/sfx/wood_destroy.wav" type="AudioStream" id=10]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -242.92, -56.054, -243.979, 82.2059, -148.098, 61.0167, -144.92, -42.8107 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -78.7033, -35.9242, 28.8322, -47.5783, 18.2376, 21.2868, -69.1681, 48.3031 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 92.4, -38.0431, 141.135, -42.281, 137.427, 59.9572, 88.6919, 62.6059 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 205.763, -52.8755, 212.119, 71.0816, 297.936, 83.7952, 277.806, -64.5296 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 300, 30 )

[node name="RottenWood" type="StaticBody2D"]
light_mask = 0
z_index = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
wood_fragment_1 = ExtResource( 4 )
wood_fragment_2 = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -244.671, -122.49, 2.10779, -77.0538, 272.05, -116.253, 275.614, 132.307, -2.34671, 78.8534, -266.944, 130.526 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PoolVector2Array( -274.962, -136.744, -4.12851, -101.999, 287.195, -133.18, 284.523, 152.798, -2.34671, 98.4532, -288.325, 140.325 )

[node name="wood-1" type="Sprite" parent="."]
position = Vector2( 166.532, 9.47501 )
texture = ExtResource( 2 )

[node name="wood-2" type="Sprite" parent="."]
position = Vector2( -150.824, -52.119 )
rotation = -2.90213
texture = ExtResource( 2 )

[node name="wood-3" type="Sprite" parent="."]
position = Vector2( 134.76, 72.7462 )
rotation = 0.264051
texture = ExtResource( 1 )

[node name="wood-4" type="Sprite" parent="."]
position = Vector2( -187.387, 82.8484 )
rotation = 0.00570202
texture = ExtResource( 1 )

[node name="wood-5" type="Sprite" parent="."]
position = Vector2( -22.385, 11.0108 )
texture = ExtResource( 2 )

[node name="wood-6" type="Sprite" parent="."]
position = Vector2( -4.98682, -0.213806 )
rotation = -3.108
scale = Vector2( 0.756762, 0.718539 )
texture = ExtResource( 1 )

[node name="Occluders" type="Node2D" parent="."]

[node name="Occluder1" type="LightOccluder2D" parent="Occluders"]
occluder = SubResource( 1 )

[node name="Occluder2" type="LightOccluder2D" parent="Occluders"]
occluder = SubResource( 2 )

[node name="Occluder3" type="LightOccluder2D" parent="Occluders"]
occluder = SubResource( 3 )

[node name="Occluder4" type="LightOccluder2D" parent="Occluders"]
occluder = SubResource( 4 )

[node name="BoidCollision" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="BoidCollision" index="0"]
shape = SubResource( 5 )

[node name="ObstacleLabel" parent="." instance=ExtResource( 7 )]

[node name="ThudSound" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 9 )
volume_db = 2.486

[node name="DestroySound" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 10 )
volume_db = 5.0
pitch_scale = 0.81
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]

[editable path="BoidCollision"]
